[gd_scene load_steps=7 format=3 uid="uid://bvgvfwus447or"]

[ext_resource type="Script" uid="uid://brxlfr8tgr862" path="res://Main/Scripts/main_menu.gd" id="1_0xba0"]
[ext_resource type="Shader" uid="uid://chp3p0egrvyhm" path="res://Main/Scripts/scroll.gdshader" id="2_2o83p"]
[ext_resource type="Texture2D" uid="uid://dmrayi6m4gv1n" path="res://IMG_2775.PNG" id="3_yuab4"]
[ext_resource type="AudioStream" uid="uid://bm370d4v1oulf" path="res://assets/music/thm 1.wav" id="4_bxkcv"]
[ext_resource type="AudioStream" uid="uid://cds4aw5cbr0ts" path="res://assets/music/Gameplay action loop.wav" id="5_yuab4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bxkcv"]
shader = ExtResource("2_2o83p")
shader_parameter/speed = 0.05

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xba0")

[node name="bg" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_bxkcv")
layout_mode = 0
offset_top = -125.0
offset_right = 2304.0
offset_bottom = 1473.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_yuab4")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 150.0
offset_right = 264.0
offset_bottom = 300.0
grow_horizontal = 2
scale = Vector2(0.7, 0.7)
theme_override_font_sizes/font_size = 100
text = "Play"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -298.0
offset_right = 264.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.7, 0.7)
theme_override_font_sizes/font_size = 100
text = "Exit"

[node name="music_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bxkcv")

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yuab4")
volume_db = -6.0

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="finished" from="music_theme" to="." method="_on_music_theme_finished"]
[connection signal="finished" from="music2" to="." method="_on_music_2_finished"]
